wireguard-vpn/network-policy/wireguard-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wireguard-server-policy
  namespace: wireguard
spec:
  podSelector:
    matchLabels:
      app: wireguard 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 192.168.0.0/16
          - 172.16.0.0/12
    ports:
      - protocol: UDP
        port: 51820

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
